[package]
name       = "daos-agency"
version = "1.0.0"
authors = ["daos-org"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

sp-core = { version = "25.0.0", default-features = false }
sp-io = { version = "25.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }

frame-benchmarking = { version = "25.0.0", default-features = false, optional = true }
frame-support = { version = "25.0.0", default-features = false }
frame-system = { version = "25.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }


# local
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}
dao = { path = "../create-dao", package = "daos-create-dao", default-features = false}
daos-doas = {path = "../doas", default-features = false}
sudo = {path = "../sudo", package = "daos-sudo", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"dao/std",
	"daos-doas/std",
	"pallet-balances/std",
	"sudo/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"primitives/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
