[package]
name       = "daos-collective"
version = "1.0.0"
authors = ["LISTEN TEAM"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.16", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.23', default-features = false }

# local
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}
dao = { path = "../create-dao", package = "daos-create-dao", default-features = false}
daos-doas = {path = "../doas", default-features = false}

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"dao/std",
	"daos-doas/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"primitives/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
