[package]
name = "daos-create-dao"
version = "1.0.0"
authors = ["daos-org"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

sp-runtime = { default-features = false,  version = "25.0.0" }
sp-std = { version = "12.0.0", default-features = false }
sp-core = { version = "25.0.0", default-features = false }
sp-io = { version = "25.0.0", default-features = false }

frame-benchmarking = { version = "25.0.0", default-features = false, optional = true }
frame-support      = { version = "25.0.0", default-features = false }
frame-system       = { version = "25.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }

# local
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'primitives/std',
	"frame-benchmarking/std",
	'frame-support/std',
	'frame-system/std',
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-balances/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
