[package]
name        = 'daos-emergency'
authors     = ["DICO-TEAM"]
description = 'FRAME pallet template for defining custom runtime logic.'
license     = 'Apache 2.0'
version     = '3.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info 		      = { version = "2.1.1", default-features = false, features = ["derive"] }
codec                 = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }

# local
dao = { path = "../create-dao", package = "daos-create-dao", default-features = false}
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}
sudo = { path = "../sudo", package = "daos-sudo", default-features = false}

[dev-dependencies]
serde      = { version = "1.0.101" }
sp-core    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }
sp-io      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.25', default-features = false }

[features]
default = ['std']

std = [
    'codec/std',
    'scale-info/std',
	'sp-std/std',
	'frame-support/std',
    'frame-system/std',
	'sp-runtime/std',

    'dao/std',
    'pallet-balances/std',
    'sudo/std',
	'frame-system/std',
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
