[package]
name        = 'daos-emergency'
authors     = ["DICO-TEAM"]
description = 'FRAME pallet template for defining custom runtime logic.'
license     = 'Apache 2.0'
version     = '3.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

sp-runtime = { version = "28.0.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }

frame-benchmarking = { version = "25.0.0", default-features = false, optional = true }
frame-support      = { version = "25.0.0", default-features = false }
frame-system       = { version = "25.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }

# local
dao = { path = "../create-dao", package = "daos-create-dao", default-features = false}
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}
sudo = { path = "../sudo", package = "daos-sudo", default-features = false}

[dev-dependencies]
serde      = { version = "1.0.101" }
sp-core    = { version = "25.0.0", default-features = false }
sp-runtime = { version = "25.0.0", default-features = false }
sp-io      = { version = "25.0.0", default-features = false }

[features]
default = ['std']

std = [
    'codec/std',
    'scale-info/std',
	'sp-std/std',
	'frame-support/std',
    'frame-system/std',
	'sp-runtime/std',

    'dao/std',
    'pallet-balances/std',
    'sudo/std',
	'frame-system/std',
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
