[package]
name = "daos-primitives"
version = "1.0.0"
authors = ["daos-org"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }


frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = []
