[package]
name = "daos-primitives"
version = "1.0.0"
authors = ["daos-org"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

frame-support = { version = "25.0.0", default-features = false }
sp-runtime = { version = "25.0.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = []
