[package]
name       = "daos-square"
version = "1.0.0"
authors = ["daos-org"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

sp-std = { default-features = false,  version = "12.0.0" }
sp-runtime = { default-features = false,  version = "28.0.0" }

frame-benchmarking = { version = "25.0.0", optional = true, default-features = false }
frame-support      = { version = "25.0.0", default-features = false }
frame-system       = { version = "25.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }

# local
dao = { path = "../create-dao", package = "daos-create-dao", default-features = false}
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}
sudo = { path = "../sudo", package = "daos-sudo", default-features = false}

[dev-dependencies]
serde      = { version = "1.0.101" }
sp-core    = { version = "25.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
sp-io      = { version = "27.0.0", default-features = false }


[features]
default = ['std']

std = [
	'codec/std',
	'scale-info/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-runtime/std',

	'dao/std',
	'pallet-balances/std',
	"sudo/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
