[package]
name = "daos-sudo"
version = "1.0.0"
authors = ["daos-org"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/LISTEN-DAOS/daos"
repository = "https://github.com/LISTEN-DAOS/daos.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info 		      = { version = "2.0.1", default-features = false, features = ["derive"] }
codec                 = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
sp-runtime = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-std = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

# local
primitives = { path = "../primitives", package = "daos-primitives", default-features = false}
dao = { path = "../create-dao", package = "daos-create-dao", default-features = false}

[features]
default = ["std"]
std = [
    "scale-info/std",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "primitives/std",
    "dao/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

